--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <p class="text-muted">Tớ là Tiên, 18 tuổi. Tớ đam mê công nghệ từ năm 16 tuổi. Chủ yếu chỉ làm những dự án be bé, nghịch chơi thôi.
 Nên đây mới thực sự là dự án đầu tay của tớ
 </p>
-                            <p class="text-muted">Chào mừng đến với  thế giới của tớ - một cô nàng tràn đầy tham vọng, nhiệt huyết và sự tích cực
+                            <p class="text-muted">Chào mừng đến với  thế giới của tớ - một cô nàng tràn đầy nhiệt huyết, tham vọng và sự tích cực
 
 </p> 
 
