--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                         <div class="event event-description-right rounded p-4 border float-left text-left">
                                             <h5 class="title mb-0 text-capitalize">Hồ Chí Minh</h5>
                                             <small class="company">Sinh ra và lớn lên</small>
-                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Tớ sống ở Quận 1, TP.HCM gần 10 năm, nhưng khá tiếc là hồi đó bé hổng nhớ gì mấy. Và yes tớ đang nói tiếng Bắc, nhưng đâu đó vẫn luôn bị lẫn từ miền Nam vào. Hết dịch tớ rất muốn về HCM, xem mọi thứ giờ thay đổi như nào :v </p>
+                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Tớ sống ở Quận 1, TP.HCM gần 10 năm, nhưng khá tiếc là hồi đó bé hổng nhớ gì mấy. Và yes tớ nói được cả giọng Nam và Bắc. Hết dịch tớ rất muốn về HCM, xem mọi thứ giờ thay đổi như nào :v </p>
                                         </div>
                                     </div><!--end col-->
                                 </div><!--end row-->
@@ -433,7 +433,7 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                         <div class="event event-description-left rounded p-4 border float-left text-right">
                                             <h5 class="title mb-0 text-capitalize">Hà Nội</h5>
                                             <small class="company">Sinh sống và học tập</small>
-                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Điều tớ thích nhất ở HN là mùa đông, và cấp 1 hàng ngày được gia đình chở đi học qua Hồ Gươm (Hồ Hoàn Kiếm). Nơi đây là nơi tớ dành trọn những năm tháng học sinh-sinh viên ở đây. Bao kỉ niệm, có vui buồn nhưng tất cả đều rất ý nghĩa và đáng nhớ</p>
+                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Điều tớ thích nhất ở HN là mùa đông, và cấp 1 hàng ngày được gia đình chở đi học qua Hồ Gươm (Hồ Hoàn Kiếm)<br> Nơi đây là nơi tớ dành trọn những năm tháng học sinh-sinh viên ở đây. Bao kỉ niệm, có vui buồn nhưng tất cả đều rất ý nghĩa và đáng nhớ</p>
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-6 col-md-6 col-sm-6 order-sm-2 order-1">
@@ -465,7 +465,7 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                         <div class="event event-description-left rounded p-4 border float-left text-right">
                                             <h5 class="title mb-0 text-capitalize">Đại học</h5>
                                             <small class="company">Ngành Kỹ Thuật Phần Mềm</small>
-                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Năm tớ thi đại học bị lạm phát điểm, nên tớ đã đánh mất cơ hội vào ngôi trường tớ luôn mong ước mặc dù đã quyết tâm rất nhiều (ĐH Bách Khoa). Nhưng tớ không nghĩ điều đó có thể làm tớ nản chí, hay ngăn tớ trở thành một cô lập trình viên giỏi. Nên ở đâu cũng vậy, kính mến thầy cô, tôn trọng bạn bè, và học thật giỏi !</p>
+                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Năm tớ thi đại học bị lạm phát điểm, nên tớ đã đánh mất cơ hội vào ngôi trường tớ luôn mong ước, mặc dù đã quyết tâm rất nhiều (ĐH Bách Khoa). Nhưng tớ không nghĩ điều đó có thể làm tớ nản chí, hay ngăn tớ trở thành một cô lập trình viên giỏi. Nên ở đâu cũng vậy, kính mến thầy cô, tôn trọng bạn bè, và học thật giỏi !</p>
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-6 col-md-6 col-sm-6 order-sm-2 order-1">
