--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -123,12 +123,12 @@
                             <div class="content p-4">
                                 <h6 class="font-weight-normal"><i class="mdi mdi-tag text-primary mr-1"></i><a href="javscript:void(0)" class="text-primary">Giới thiệu</a></h6>
                                 <p class="text-muted mt-3">
-                                            1. Tớ có tên độc nhất vô nhị ( cảm ơn mẹ .-. ) <br>
+                                            1. Tớ có tên độc nhất vô nhị (cảm ơn mẹ .-.) <br>
                                             2. Tớ theo họ mẹ <br>
                                             3. Tớ cao 1m49, đúng vậy :) <br>
                                             4. Tớ thích màu xanh nước biển nhạt<br>
-                                            5. Tớ ăn rất nhiều, nhưng vẫn thon gọn vì tập gym rất nhiều<br>
-                                            6. Tớ sinh ra ở TP Hồ Chí Minh, sống hơn 5 năm, nên có thể nói được cả 2 giọng Nam và Bắc<br>
+                                            5. Tớ ăn nhiều, nhưng vẫn thon gọn vì tập gym rất nhiều<br>
+                                            6. Tớ sinh ra ở TP Hồ Chí Minh, sống gần 10f năm, nên có thể nói được cả 2 giọng Nam và Bắc<br>
                                             7. Tớ từng cắt tóc ngắn như con trai <br>
                                             8. Tớ chơi bóng rổ <br>
                                             9. Tớ chơi guitar, piano, trống, ukulele, sáo. Tự tin nhất là guitar<br>
