--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5 col-md-5">
                         <div class="about-hero">
-                            <img src="images/hero.png" class="img-fluid mx-auto d-block about-tween position-relative" alt="">
+                            <img src="images/tien.png" class="img-fluid mx-auto d-block about-tween position-relative" alt="">
                         </div>
                     </div><!--end col-->
 
