--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -114,7 +114,7 @@
                     <div class="col-lg-5 col-md-4">
                         <div class="sticky-sidebar">
                             <img src="images/blog/tien2.jpg" class="img-fluid rounded d-block"style="margin-bottom: 150px;" alt="">
-                            <img src="images/blog/06.jpg" class="img-fluid rounded mt-4" alt="">
+                            <img src="images/blog/tien2.jpg" class="img-fluid rounded mt-4" alt="">
                         </div>
                     </div>
                     <!-- BLog Start -->
