--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -113,8 +113,8 @@
                 <div class="row">
                     <div class="col-lg-5 col-md-4">
                         <div class="sticky-sidebar">
-                            <img src="images/blog/tien2.jpg" class="img-fluid rounded d-block"style="margin-bottom: 150px;" alt="">
-                            <img src="images/blog/tien2.jpg" class="img-fluid rounded mt-4" alt="">
+                            <img src="images/blog/tien2.jpg" class="img-fluid rounded d-block"style="margin-bottom: 151px;" alt="">
+                            <img src="images/blog/06.jpg" class="img-fluid rounded mt-4" alt="">
                         </div>
                     </div>
                     <!-- BLog Start -->
@@ -123,22 +123,22 @@
                             <div class="content p-4">
                                 <h6 class="font-weight-normal"><i class="mdi mdi-tag text-primary mr-1"></i><a href="javscript:void(0)" class="text-primary">Giới thiệu</a></h6>
                                 <p class="text-muted mt-3">
-                                            1. Tớ có tên độc nhất vô nhị (cảm ơn mẹ .-.) <br>
+                                            1. Tớ có tên độc nhất vô nhị ( cảm ơn mẹ .-. ) <br>
                                             2. Tớ theo họ mẹ <br>
                                             3. Tớ cao 1m49, đúng vậy :) <br>
                                             4. Tớ thích màu xanh nước biển nhạt<br>
-                                            5. Tớ ăn nhiều, nhưng vẫn thon gọn vì tập gym rất nhiều<br>
-                                            6. Tớ sinh ra ở TP Hồ Chí Minh, sống gần 10 năm, nên tớ có thể nói cả giọng Nam và Bắc<br>
+                                            5. Tớ ăn rất nhiều, nhưng vẫn thon gọn vì tập gym rất nhiều<br>
+                                            6. Tớ sinh ra ở TP Hồ Chí Minh, sống hơn 5 năm, nên có thể nói được cả 2 giọng Nam và Bắc<br>
                                             7. Tớ từng cắt tóc ngắn như con trai <br>
                                             8. Tớ chơi bóng rổ <br>
                                             9. Tớ chơi guitar, piano, trống, ukulele, sáo. Tự tin nhất là guitar<br>
-                                                 fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được vào đội trống của trường, thế là mua cả dàn electric drum về nhà :)) haha <br>
+                                            fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được vào đội trống của trường, thế là mua cả bộ electric drum về nhà :)) haha <br>
                                             10. Tớ rất thích nấu ăn, và tớ thích món Âu, nhất là khoai tây chiên<br>
                                             11. Tớ cận 2 độ, nhưng thường xuyên không đeo kính mà nhìn nheo nheo<br>
                                             12. Tớ từng là một sneakershead, và thích mặc nhiều local brand đắt tiền. Nhưng giờ chỉ mặc fullback, vì tớ không thấy những thứ bên ngoài còn quan trọng nữa<br>
-                                            13. Tớ theo style Underground, hay còn được cho là style “hầm hố”, mặc những bộ quần áo to, thùng thình và chủ yếu màu đen… vì thoải mái<br>
-                                                NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng<br>
-                                                              I can do both ;)<br>
+                                            13. Tớ theo Underground style, hay còn được cho là style “hầm hố”, mặc những bộ quần áo to, thùng thình và chủ yếu màu đen… vì thoải mái<br>
+                                            NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng<br>
+                                            I can do both ;)<br>
                                             14. Tớ không chảnh dog, mà do tớ là người hướng nội và tớ mắc social anxiety. Tớ có thể rất khó chịu khi phải ở đông người, đặc biệt là với những người mình không thấy thoải mái. Nên tớ chọn cách im lặng. Và ngược lại với những người tớ muốn ở bên, tớ nói rất nhiều, và được mọi người cho là khá hài hước và vui vẻ. <br>
                                             15. Tớ yêu bản thân kiểu cực kì cực kì nhiều :)<br>
                                                 
