--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-lg-5 col-md-4">
                         <div class="sticky-sidebar">
-                            <img src="images/blog/tien2.jpg" class="img-fluid rounded d-block"style="margin-bottom: 151px;" alt="">
+                            <img src="images/blog/single-1.jpg" class="img-fluid rounded d-block"style="margin-bottom: 151px;" alt="">
                             <img src="images/blog/06.jpg" class="img-fluid rounded mt-4" alt="">
                         </div>
                     </div>
