--- a/page-blog-detail2.html
+++ b/page-blog-detail2.html
@@ -130,8 +130,8 @@
                                Và lớp 11, ở trường dạy Pascal, từ hè lớp 10 là tớ đã lấy sách ra tự học trước rồi (suỵt, bạn bè tớ không ai biết đâu)
                                 <br>Năm lớp 12, tớ thi giải Pascal cấp trường, và được thi tiếp cấp Thành phố, nhưng do lúc đó sát với thi THPTQG quá nên tớ đã không tham gia<br>
                                 Chỉ là một vòng loại nhỏ của trường, chẳng có gì to tát, nhưng nó lại là tất cả với tớ, đấy chính là giây phút tớ nhận ra, yeh cái này thực sự dành cho mình <br>
-                                Và từ đó tới nay, tớ lại càng ngày đam mê code hơn :3 <br>
-                                Nên trái ngược hoàn toàn với những người đến với ngành này vì cái mác “lương triệu đô”, “ngồi phòng máy lạnh”. Tớ bước chân vào “thế giới” CNTT với 100% đam mê và nhiệt huyết. <br>
+                                Và từ đó tới nay, tớ lại càng ngày đam mê code hơn :3 <br> <br>
+                                Nên trái ngược hoàn toàn với những người đến với ngành này vì cái mác “lương triệu đô”, “ngồi phòng máy lạnh”. Tớ bước chân vào “thế giới” CNTT với 100% đam mê và nhiệt huyết. <br> <br>
                                 Tớ mới bắt đầu thôi, biết rằng sẽ còn rất nhiều khó khăn, nhưng tớ tin rằng những thứ đó sẽ không bao giờ làm tớ gục ngã được đâu ;)
 
                                 
