--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -135,11 +135,11 @@
                                             fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được vào đội trống của trường, thế là mua cả bộ electric drum về nhà :)) haha <br>
                                             10. Tớ rất thích nấu ăn, và tớ thích món Âu, nhất là khoai tây chiên<br>
                                             11. Tớ cận 2 độ, nhưng thường xuyên không đeo kính mà nhìn nheo nheo<br>
-                                            12. Tớ từng là một sneakershead, và thích mặc nhiều local brand đắt tiền. Nhưng giờ chỉ mặc fullback, vì tớ không thấy những thứ bên ngoài còn quan trọng nữa<br>
+                                            12. Tớ thường ít nói và trầm tính, nhưng khi mà đã thân rồi thì tớ nói rất nhiều :))          <br>
                                             13. Tớ theo Underground style, hay còn được cho là style “hầm hố”, mặc những bộ quần áo to, thùng thình và chủ yếu màu đen… vì thoải mái<br>
                                             NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng<br>
                                             I can do both ;)<br>
-                                            14. Tớ không chảnh dog, mà do tớ là người hướng nội và tớ mắc social anxiety. Tớ có thể rất khó chịu khi phải ở đông người, đặc biệt là với những người mình không thấy thoải mái. Nên tớ chọn cách im lặng. Và ngược lại với những người tớ muốn ở bên, tớ nói rất nhiều, và được mọi người cho là khá hài hước và vui vẻ. <br>
+                                            14. Tớ từng là một sneakershead, và thích mặc nhiều local brand đắt tiền. Nhưng giờ chỉ mặc fullback, vì tớ không thấy những thứ bên ngoài còn quan trọng nữa<br>
                                             15. Tớ yêu bản thân kiểu cực kì cực kì nhiều :)<br>
                                                 
 </p>
