--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -127,7 +127,7 @@
                                             2. Tớ theo họ mẹ <br>
                                             3. Tớ cao 1m49, đúng vậy :) <br>
                                             4. Tớ thích màu xanh nước biển nhạt<br>
-                                            5. Tớ ăn rất nhiều, nhưng vẫn thon gọn vì tập gym rất nhiều<br>
+                                            5. Tớ ăn nhiều, nhưng vẫn thon gọn vì tập gym rất nhiều<br>
                                             6. Tớ sinh ra ở TP Hồ Chí Minh, sống hơn 5 năm, nên có thể nói được cả 2 giọng Nam và Bắc<br>
                                             7. Tớ từng cắt tóc ngắn như con trai <br>
                                             8. Tớ chơi bóng rổ <br>
