--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -128,7 +128,7 @@
                                             3. Tớ cao 1m49, đúng vậy :) <br>
                                             4. Tớ thích màu xanh nước biển nhạt<br>
                                             5. Tớ ăn nhiều, nhưng vẫn thon gọn vì tập gym rất nhiều<br>
-                                            6. Tớ sinh ra ở TP Hồ Chí Minh, sống hơn 5 năm, nên có thể nói được cả 2 giọng Nam và Bắc<br>
+                                            6. Tớ sinh ra ở TP Hồ Chí Minh, sống gần 10 năm, nên có thể nói được cả 2 giọng Nam và Bắc<br>
                                             7. Tớ từng cắt tóc ngắn như con trai <br>
                                             8. Tớ chơi bóng rổ <br>
                                             9. Tớ chơi guitar, piano, trống, ukulele, sáo. Tự tin nhất là guitar<br>
