--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -133,13 +133,13 @@
                                             8. Tớ chơi bóng rổ <br>
                                             9. Tớ chơi guitar, piano, trống, ukulele, sáo. Tự tin nhất là guitar<br>
                                             fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được vào đội trống của trường, thế là mua cả dàn electric drum về nhà :)) haha <br>
-                                            10. Tớ rất thích nấu ăn, và tớ thích món Âu, nhất là khoai tây chiên<br>
+                                            10. Tớ rất thích nấu ăn, thích món Âu, nhất là khoai tây chiên<br>
                                             11. Tớ cận 2 độ, nhưng thường xuyên không đeo kính mà nhìn nheo nheo<br>
                                             12. Tớ thường ít nói và trầm tính, nhưng khi mà đã thân rồi thì tớ nói rất nhiều :))          <br>
-                                            13. Tớ theo Underground style, hay còn được cho là style “hầm hố”, mặc những bộ quần áo to, thùng thình và chủ yếu màu đen… vì thoải mái<br>
+                                            13. Tớ theo phong cách Underground, hay còn được cho là style “hầm hố”, với những bộ quần áo to, thùng thình và chủ yếu màu đen… vì thoải mái<br>
                                             NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng<br>
                                             I can do both ;)<br>
-                                            14. Tớ từng là một sneakershead, và thích mặc nhiều local brand đắt tiền. Nhưng giờ chỉ mặc fullback, vì tớ không thấy những thứ bên ngoài còn quan trọng nữa<br>
+                                            14. Tớ từng là một sneakershead, và thích mặc nhiều local brand đắt tiền. Nhưng giờ chỉ thường mặc fullback, vì tớ thấy những thứ bên ngoài không còn quan trọng nữa<br>
                                             15. Tớ yêu bản thân kiểu cực kì cực kì nhiều :)<br>
                                                 
 </p>
