--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -139,7 +139,7 @@
                                             13. Tớ theo phong cách Underground, hay còn được cho là style “hầm hố”, với những bộ quần áo to, thùng thình và chủ yếu màu đen… vì thoải mái<br>
                                             NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng<br>
                                             I can do both ;)<br>
-                                            14. Tớ từng là một sneakershead, và thích mặc nhiều local brand đắt tiền. Nhưng giờ chỉ thường mặc fullback, vì tớ thấy những thứ bên ngoài không còn quan trọng nữa<br>
+                                            14. Tớ từng là một sneakershead, và thích mặc nhiều local brand đắt tiền. Nhưng giờ chỉ thường mặc fullblack, vì tớ thấy những thứ bên ngoài không còn quan trọng nữa<br>
                                             15. Tớ yêu bản thân kiểu cực kì cực kì nhiều :)<br>
                                                 
 </p>
