--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -131,7 +131,7 @@
                                             6. Tớ sinh ra ở TP Hồ Chí Minh, sống gần 10 năm, nên có thể nói được cả 2 giọng Nam và Bắc<br>
                                             7. Tớ từng cắt tóc ngắn như con trai <br>
                                             8. Tớ chơi bóng rổ <br>
-                                            9. Tớ chơi guitar, piano, trống, ukulele, sáo. Tự tin nhất là guitar<br>
+                                            9. Tớ chơi piano, guitar, trống, ukulele, sáo, kalimba. Tự tin nhất là guitar :3 <br>
                                             fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được vào đội trống của trường, thế là mua cả dàn electric drum về nhà :)) haha <br>
                                             10. Tớ rất thích nấu ăn, thích món Âu, nhất là khoai tây chiên<br>
                                             11. Tớ cận 2 độ, nhưng thường xuyên không đeo kính mà nhìn nheo nheo<br>
