--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -124,24 +124,28 @@
                                 <h6 class="font-weight-normal"><i class="mdi mdi-tag text-primary mr-1"></i><a href="javscript:void(0)" class="text-primary">Giới thiệu</a></h6>
                                 <p class="text-muted mt-3">
                                                           <pre>
-                                            1. Tớ có tên độc nhất vô nhị ( cảm ơn mẹ .-. ) 
-                                            2. Tớ theo họ mẹ 
-                                            3. Tớ cao 1m49, đúng vậy :) 
-                                            4. Tớ thích màu xanh nước biển nhạt
-                                            5. Tớ ăn nhiều, nhưng vẫn thon gọn vì tập gym rất nhiều
-                                            6. Tớ sinh ra ở TP Hồ Chí Minh, sống gần 10 năm, nên có thể nói được cả 2 giọng Nam và Bắc
-                                            7. Tớ từng cắt tóc ngắn như con trai 
-                                            8. Tớ chơi bóng rổ 
-                                            9. Tớ chơi piano, guitar, trống, ukulele, sáo, kalimba. Tự tin nhất là guitar :3 
-                                               fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được vào đội trống của trường, thế là mua cả dàn electric drum về nhà :)) haha 
-                                            10. Tớ rất thích nấu ăn, thích món Âu, nhất là khoai tây chiên
-                                            11. Tớ cận 2 độ, nhưng thường xuyên không đeo kính mà nhìn nheo nheo
-                                            12. Tớ thường ít nói và trầm tính, nhưng khi mà đã thân rồi thì tớ nói rất nhiều :))          
-                                            13. Tớ theo phong cách Streetwear, với những bộ quần áo to, thùng thình… vì thoải mái
-                                                NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng
-                                                I can do both ;)
-                                            14. Tớ từng là một sneakershead, và thích mặc nhiều local brand đắt tiền. Nhưng giờ chỉ thường mặc fullblack, vì tớ thấy những thứ bên ngoài không còn quan trọng nữa
-                                            15. Tớ yêu bản thân kiểu cực kì cực kì nhiều :)
+1.  Tớ có tên độc nhất vô nhị ( cảm ơn mẹ .-. ) 
+2. Tớ theo họ mẹ 
+3. Tớ cao 1m49, đúng vậy :) 
+4. Tớ thích màu xanh nước biển nhạt
+5. Tớ ăn nhiều, nhưng vẫn thon gọn vì tập gym rất nhiều
+6. Tớ sinh ra ở TP Hồ Chí Minh, sống gần 10 năm, nên có thể nói được cả 2 giọng Nam và Bắc
+7. Tớ từng cắt tóc ngắn như con trai 
+8. Tớ chơi bóng rổ 
+9. Tớ chơi piano, guitar, trống, ukulele, sáo, kalimba. Tự tin nhất là guitar :3 
+    fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được 
+    vào đội trống của trường, thế là mua cả dàn electric drum về nhà :)) haha 
+10. Tớ rất thích nấu ăn, thích món  u, nhất là khoai tây chiên
+11. Tớ cận 2 độ, nhưng thường xuyên không đeo kính mà nhìn nheo nheo
+12. Tớ thường ít nói và trầm tính, nhưng khi mà đã thân rồi thì tớ nói rất nhiều :))          
+13. Tớ theo phong cách Streetwear
+     với những bộ quần áo to, thùng thình… vì thoải mái
+     NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng. I can do both ;)
+14. Tớ từng là một sneakershead, và thích mặc nhiều local brand đắt tiền. 
+      Nhưng giờ chỉ thường mặc fullblack, vì tớ thấy những thứ bên ngoài không   
+      còn quan trọng nữa
+15. Tớ yêu bản thân kiểu cực kì cực kì nhiều :)
+
                                                           </pre>
                                                 
 </p>
