--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -133,8 +133,8 @@
 7. Tớ từng cắt tóc ngắn như con trai <br>
 8. Tớ chơi bóng rổ <br>
 9. Tớ chơi piano, guitar, trống, ukulele, sáo, kalimba. Tự tin nhất là guitar :3 <br>
-&emsp fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được <br>
-&emsp vào đội trống của trường, thế là mua cả dàn electric drum về nhà :)) haha <br>
+&nbsp fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được <br>
+&nbsp vào đội trống của trường, thế là mua cả dàn electric drum về nhà :)) haha <br>
 10. Tớ rất thích nấu ăn, thích món  u, nhất là khoai tây chiên<br>
 11. Tớ cận 2 độ, nhưng thường xuyên không đeo kính mà nhìn nheo nheo<br>
 12. Tớ thường ít nói và trầm tính, nhưng khi mà đã thân rồi thì tớ nói rất nhiều :)       <br>   
