--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -133,16 +133,16 @@
 7. Tớ từng cắt tóc ngắn như con trai <br>
 8. Tớ chơi bóng rổ <br>
 9. Tớ chơi piano, guitar, trống, ukulele, sáo, kalimba. Tự tin nhất là guitar :3 <br>
-&nbsp fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được <br>
-&nbsp vào đội trống của trường, thế là mua cả dàn electric drum về nhà :)) haha <br>
+&nbsp; &nbsp fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được <br>
+&nbsp; &nbsp vào đội trống của trường, thế là mua cả dàn electric drum về nhà :)) haha <br>
 10. Tớ rất thích nấu ăn, thích món  u, nhất là khoai tây chiên<br>
 11. Tớ cận 2 độ, nhưng thường xuyên không đeo kính mà nhìn nheo nheo<br>
 12. Tớ thường ít nói và trầm tính, nhưng khi mà đã thân rồi thì tớ nói rất nhiều :)       <br>   
 13. Tớ theo phong cách Streetwear<br>
-    với những bộ quần áo to, thùng thình… vì thoải mái<br>
-    NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng. I can do both ;)<br>
+&nbsp; &nbsp với những bộ quần áo to, thùng thình… vì thoải mái<br>
+&nbsp; &nbsp NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng. I can do both ;)<br>
 14. Tớ từng là một sneakershead, và thích mặc nhiều local brand <br>
-    Nhưng giờ chỉ thường mặc fullblack, vì tớ thấy những thứ bên ngoài không còn quan trọng nữa
+&nbsp; &nbsp Nhưng giờ chỉ thường mặc fullblack, vì tớ thấy những thứ bên ngoài không còn quan trọng nữa
 15. Tớ yêu bản thân kiểu cực kì cực kì nhiều :)<br>
 
                                                 
