--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -139,10 +139,11 @@
 11. Tớ cận 2 độ, nhưng thường xuyên không đeo kính mà nhìn nheo nheo<br>
 12. Tớ thường ít nói và trầm tính, nhưng khi mà đã thân rồi thì tớ nói rất nhiều :)       <br>   
 13. Tớ theo phong cách Streetwear<br>
-&nbsp; &nbsp với những bộ quần áo to, thùng thình… vì thoải mái<br>
-&nbsp; &nbsp NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng. I can do both ;)<br>
+&nbsp; &nbsp; &nbsp với những bộ quần áo to, thùng thình… vì thoải mái<br>
+&nbsp; &nbsp; &nbsp NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng. I can do both ;)<br>
 14. Tớ từng là một sneakershead, và thích mặc nhiều local brand <br>
-&nbsp; &nbsp Nhưng giờ chỉ thường mặc fullblack, vì tớ thấy những thứ bên ngoài không còn quan trọng nữa
+&nbsp; &nbsp; &nbspNhưng giờ chỉ thường mặc fullblack, vì tớ thấy những thứ bên ngoài không còn <br>
+&nbsp; &nbsp; &nbsp quan trọng nữa
 15. Tớ yêu bản thân kiểu cực kì cực kì nhiều :)<br>
 
                                                 
