--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -142,7 +142,7 @@
 với những bộ quần áo to, thùng thình… vì thoải mái<br>
 NHƯNG tớ hoàn toàn có thể nữ tính, mặc váy và dịu dàng. I can do both ;)<br>
 14. Tớ từng là một sneakershead, và thích mặc nhiều local brand <br>
-Nhưng giờ chỉ thường mặc fullblack, vì tớ thấy những thứ bên ngoài không còn quan trọng nữa
+Nhưng giờ chỉ thường mặc fullblack, vì tớ thấy những thứ bên ngoài không còn quan trọng nữa <br>
 15. Tớ yêu bản thân kiểu cực kì cực kì nhiều :)<br>
 
                                                 
