--- a/page-blog-detail.html
+++ b/page-blog-detail.html
@@ -135,7 +135,7 @@
 9. Tớ chơi piano, guitar, trống, ukulele, sáo, kalimba. Tự tin nhất là guitar :3 <br>
                 fun fact : Tớ chơi trống vì cấp 1 cay quá, do không đủ cao nên không được vào đội trống của trường, thế là mua cả dàn electric drum về nhà :)) haha <br>
 
-10. Tớ rất thích nấu ăn, thích món  u, nhất là khoai tây chiên<br>
+10. Tớ rất thích nấu ăn, thích món  Âu, nhất là khoai tây chiên<br>
 11. Tớ cận 2 độ, nhưng thường xuyên không đeo kính mà nhìn nheo nheo<br>
 12. Tớ thường ít nói và trầm tính, nhưng khi mà đã thân rồi thì tớ nói rất nhiều :)       <br>   
 13. Tớ theo phong cách Streetwear<br>
