--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                             <div class="content mt-4">
                                 <h5 class="title text-uppercase">Điện thoại</h5>
                                 <p class="text-muted">Liên hệ để biết thêm thông tin chi tiết</p>
-                                <a href="tel:+152534-468-854" class="text-primary">+1900100 có :))</a>
+                                <a href="tel:+152534-468-854" class="text-primary">0978901811</a>
                             </div>  
                         </div>
                     </div><!--end col-->
