--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                             <div class="content mt-4">
                                 <h5 class="title text-uppercase">Email</h5>
                                 <p class="text-muted">Liên hệ để biết thêm thông tin chi tiết</p>
-                                <a href="mailto:tiensethanhcong@gmail.com" class="text-primary">tiensethanhcong@gmail.com</a>
+                                <a href="mailto:tiensethanhcong@gmail.com" class="text-primary">hientientt@gmail.com</a>
                             </div>  
                         </div>
                     </div><!--end col-->
