--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                             So to be honest, this is my very first project 
 
                                             </p>
-                                                                        <p class="text-muted">Welcome to my world, *a girl full of ambition, enthusiasm, and positivity*‘s world </p> 
+                                                                        <p class="text-muted">Welcome to my world, *a girl full of ambition, enthusiasm, and positivity‘s world </p> 
 
                                                 <p class="text-muted">Thank you for passing by, have a nice day !             </p>
                               <img src="images/sign.png" height="50" alt style="padding-left: 40%;">
