--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                     <li><i data-feather="user" class="fea icon-sm mr-1"></i><a href="javascript:void(0)" class="text-dark">Tiên Trần</a></li> 
                                     <li><i data-feather="tag" class="fea icon-sm mr-1"></i><a href="javascript:void(0)" class="text-dark">Giới thiệu</a></li>                                          
                                 </ul> 
-                        <h5 class="mb-3"><a href="page-blog-detail3.html" class="title text-dark">Tại sao trái đất hình cầu ? </a></h5>
+                        <h5 class="mb-3"><a href="page-blog-detail3.html" class="title text-dark">Coming soon </a></h5>
                         <ul class="list-unstyled mb-0 pt-3 border-top d-flex justify-content-between">
                             <li><a href="page-blog-detail3.html" class="text-dark">Chi tiết<i data-feather="chevron-right" class="fea icon-sm"></i></a></li>
                             <li><i class="mdi mdi-calendar-edit mr-1"></i>10 tháng 8, 2021</li>
@@ -536,8 +536,8 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                             <div class="progress-box mt-4 pt-2">
                                                 <h6 class="font-weight-normal">HTML</h6>
                                                 <div class="progress">
-                                                    <div class="progress-bar position-relative bg-primary" style="width:84%;">
-                                                        <div class="progress-value d-block text-dark h6">84%</div>
+                                                    <div class="progress-bar position-relative bg-primary" style="width:85%;">
+                                                        <div class="progress-value d-block text-dark h6">85%</div>
                                                     </div>
                                                 </div>
                                             </div><!--end process box-->
@@ -550,10 +550,10 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                                 </div>
                                             </div><!--end process box-->
                                             <div class="progress-box mt-4 pt-2">
-                                                <h6 class="font-weight-normal">JQuery</h6>
+                                                <h6 class="font-weight-normal">Javascript</h6>
                                                 <div class="progress">
-                                                    <div class="progress-bar position-relative bg-primary" style="width:25%;">
-                                                        <div class="progress-value d-block text-dark h6">25%</div>
+                                                    <div class="progress-bar position-relative bg-primary" style="width:50%;">
+                                                        <div class="progress-value d-block text-dark h6">50%</div>
                                                     </div>
                                                 </div>
                                             </div><!--end process box-->
@@ -563,13 +563,13 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                             <div class="progress-box mt-4 pt-2">
                                                 <h6 class="font-weight-normal">English</h6>
                                                 <div class="progress">
-                                                    <div class="progress-bar position-relative bg-primary" style="width:74%;">
+                                                    <div class="progress-bar position-relative bg-primary" style="width:75%;">
                                                         <div class="progress-value d-block text-dark h6">75%</div>
                                                     </div>
                                                 </div>
                                             </div><!--end process box-->
                                             <div class="progress-box mt-4 pt-2">
-                                                <h6 class="font-weight-normal">Korean</h6>
+                                                <h6 class="font-weight-normal">Chinese</h6>
                                                 <div class="progress">
                                                     <div class="progress-bar position-relative bg-primary" style="width:25%;">
                                                         <div class="progress-value d-block text-dark h6">25%</div>
@@ -583,8 +583,8 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                             <div class="progress-box mt-4 pt-2">
                                                 <h6 class="font-weight-normal">Photoshop</h6>
                                                 <div class="progress">
-                                                    <div class="progress-bar position-relative bg-primary" style="width:84%;">
-                                                        <div class="progress-value d-block text-dark h6">84%</div>
+                                                    <div class="progress-bar position-relative bg-primary" style="width:85%;">
+                                                        <div class="progress-value d-block text-dark h6">85%</div>
                                                     </div>
                                                 </div>
                                             </div><!--end process box-->
