--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                             <h4 class="title text-primary mb-3" style="font-size: 20px !important;">Tien Tran</h4>
                                                                         <h6 class="designation mb-3" style="font-size: 15px !important;">I'm a <span class="text-primary"style="font-size: 15px !important;">developer</span> (soon hihi)</h6>
                                                                         <p class="text-muted">I'm Tien, 20 years old. I've been passionate about technology since I was 16 years old, but since then I have just had some small projects. 
-                            So to be honest, this is my very first project 
+                            To be honest, this is my very first project 
 
                                             </p>
-                                                                        <p class="text-muted">Welcome to my world, *a girl full of ambition, enthusiasm, and positivity‘s world </p> 
+                                                                        <p class="text-muted">Welcome to my world, where a girl's full of ambition, enthusiasm, and positivity.</p> 
 
                                                 <p class="text-muted">Thank you for passing by, have a nice day !             </p>
                               <img src="images/sign.png" height="50" alt style="padding-left: 40%;">
