--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                         <div class="event event-description-right rounded p-4 border float-left text-left">
                                             <h5 class="title mb-0 text-capitalize">Lập trình</h5>
                                             <small class="company">bén duyên với Pascal</small>
-                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Ngay giây phút đầu tiên là tớ đã yêu rồi =))) Lớp 12, tớ vượt qua vòng thi Pascal cấp trường và được thi cấp Thành phố (nhưng do quá sát kì thi THPTQG nên tớ đã không tham gia)</p>
+                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Ngay giây phút đầu tiên là tớ đã yêu rồi =))) Lớp 12, tớ vượt qua vòng thi Pascal cấp trường và được thi cấp Thành phố</p>
                                         </div>
                                     </div><!--end col-->
                                 </div><!--end row-->
