--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                         <div class="event event-description-left rounded p-4 border float-left text-right">
                                             <h5 class="title mb-0 text-capitalize">Hà Nội</h5>
                                             <small class="company">Sinh sống và học tập</small>
-                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Điều tớ thích nhất ở HN là mùa đông, và cấp 1 hàng ngày được gia đình chở đi học qua Hồ Gươm (Hồ Hoàn Kiếm). Tớ đã dành trọn những năm tháng học sinh-sinh viên của mình ở nơi đây, bao kỉ niệm có vui buồn nhưng tất cả đều rất ý nghĩa và đáng nhớ</p>
+                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Điều tớ thích nhất ở HN là mùa đông, và hàng ngày được gia đình chở đi học qua Hồ Gươm (Hồ Hoàn Kiếm). Tớ đã dành trọn những năm tháng học sinh-sinh viên của mình ở nơi đây, bao kỉ niệm có vui buồn nhưng tất cả đều rất ý nghĩa và đáng nhớ</p>
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-6 col-md-6 col-sm-6 order-sm-2 order-1">
