--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ Nên đây mới thực sự là dự án đầu tay của tớ
                                         <div class="event event-description-right rounded p-4 border float-left text-left">
                                             <h5 class="title mb-0 text-capitalize">Hồ Chí Minh</h5>
                                             <small class="company">Sinh ra và lớn lên</small>
-                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Tớ sống ở Quận 1, TP.HCM gần 10 năm, nhưng khá tiếc là hồi đó bé hổng nhớ gì mấy. Và yes tớ nói được cả giọng Nam và Bắc. Hết dịch tớ rất muốn về HCM, xem mọi thứ giờ thay đổi như nào :v </p>
+                                            <p class="timeline-subtitle mt-3 mb-0 text-muted">Tớ sống ở Quận 1, TP.HCM, nhưng khá tiếc là hồi đó bé hổng nhớ gì mấy. Và yes tớ nói được cả giọng Nam và Bắc. Hết dịch tớ rất muốn về HCM, xem mọi thứ giờ thay đổi như nào :v </p>
                                         </div>
                                     </div><!--end col-->
                                 </div><!--end row-->
